[gd_scene load_steps=4 format=3 uid="uid://dh4ottmqglsxi"]

[ext_resource type="Script" uid="uid://bj1hbuenv8yjg" path="res://Screens/GameScreen/in_game_options.gd" id="1_62ahs"]
[ext_resource type="PackedScene" uid="uid://c5uhhdm6s5ims" path="res://Graphic Elements/Buttons/my_button.tscn" id="1_dgum1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62ahs"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[node name="InGameOptions" type="CanvasLayer"]
layer = 2
script = ExtResource("1_62ahs")

[node name="Screen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsPanel" type="Panel" parent="Screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.5
offset_top = -250.0
offset_right = 154.5
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_62ahs")

[node name="VBoxContainer" type="VBoxContainer" parent="Screen/OptionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="ReturnButton" parent="Screen/OptionsPanel/VBoxContainer" instance=ExtResource("1_dgum1")]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Return to game"

[node name="QuitButton0" parent="Screen/OptionsPanel/VBoxContainer" instance=ExtResource("1_dgum1")]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = " Save and quit to menu "

[node name="QuitButton1" parent="Screen/OptionsPanel/VBoxContainer" instance=ExtResource("1_dgum1")]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = " Save and quit to desktop"

[node name="Dimming Effect" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="ColorRect" parent="Dimming Effect"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.255659, 0.255659, 0.255659, 1)

[connection signal="pressed" from="Screen/OptionsPanel/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="Screen/OptionsPanel/VBoxContainer/QuitButton0" to="." method="_on_quit_button_0_pressed"]
[connection signal="pressed" from="Screen/OptionsPanel/VBoxContainer/QuitButton1" to="." method="_on_quit_button_1_pressed"]
